<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="com.structure.base_mvvm.presentation.auth.forgot_password.ForgotPasswordViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/ic_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:onClick="@{() -> viewModel.backToPreviousScreen}"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_back"
      app:tint="@color/colorPrimary"
      tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_title"
      style="@style/TextMediumFont"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dimen3"
      android:gravity="center"
      android:text="@string/forgot_your_password"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/colorPrimaryDark"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/ic_back"
      app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input_phone"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dimen14"
      android:layout_marginTop="@dimen/dimen40"
      android:layout_marginEnd="@dimen/dimen14"
      android:hint="@string/email"
      android:textColorHint="@color/colorDarkGray"
      app:helperTextTextColor="@color/black"
      app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_title">

      <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@={viewModel.request.phone}"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorDarkGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/appCompatButtonNext"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dimen12"
      android:layout_marginTop="@dimen/dimen24"
      android:layout_marginEnd="@dimen/dimen12"
      android:background="@drawable/btn_accent"
      android:onClick="@{()-> viewModel.sendCode()}"
      android:text="@string/send"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/input_phone" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>